GS-10170, added hieght property to prevent the content shift right before the like button loads.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -4909,6 +4909,7 @@ margin:10px 0 14px 20px;
 
 #schoolTypeInfo{
     float:left;
+    height: 22px;
 }
 
 #schoolToolLinks ul li {
